Header z-index fixed

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	z-index: 99999;
 }
 
 .container {
@@ -15,13 +16,13 @@
 }
 
 .brand {
-	font-family: 'Neue Machina';
+	font-family: "Neue Machina";
 	font-weight: 800;
 	text-transform: uppercase;
 }
 
 .link {
-	font-family: 'Neue Machina';
+	font-family: "Neue Machina";
 	font-style: normal;
 	font-weight: 500;
 	color: var(--c-text);
